--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migrate": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:run -d ormconfig.ts"
   },
   "dependencies": {
@@ -28,14 +27,13 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "axios": "^0.27.2",
-    "mysql2": "^2.3.3",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "0.3.1"
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
